--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "skipLibCheck": false
+    "skipLibCheck": false,
+    "types": ["react", "react-native"]
   },
   "exclude": [
     "node_modules",
